feat: Add Docker support with Oracle database and configure application properties